group 'jdip'
version '1.7.90-SNAPSHOT'

apply plugin: 'groovy'
apply plugin: 'java'

apply plugin: 'com.github.ben-manes.versions'

buildscript {
    repositories {
        jcenter()
    }

    dependencies {
        classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
    }
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

ext {
}

dependencies {
    compile fileTree(dir: 'lib', include: '*.jar')

    compile 'org.codehaus.groovy:groovy-all:2.4.5'

    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: "1.3"
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile "org.spockframework:spock-core:1.0-groovy-2.4"

}

